--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android" >
 
     <ImageView
-        
+
         android:id="@+id/black"
         android:layout_width="match_parent"
         android:layout_height="250dp"
@@ -21,7 +21,7 @@
 
 
     <EditText
-        android:id="@+id/username"
+        android:id="@+id/et_user"
         android:layout_below="@+id/amazon"
         android:layout_centerHorizontal="true"
         android:layout_width="250dp"
@@ -33,8 +33,8 @@
         />
 
     <EditText
-        android:id="@+id/password"
-        android:layout_below="@+id/username"
+        android:id="@+id/et_password"
+        android:layout_below="@+id/et_user"
         android:layout_centerHorizontal="true"
         android:layout_width="250dp"
         android:layout_height="40dp"
@@ -45,10 +45,10 @@
         android:gravity="center"/>
 
     <Button
-        android:id="@+id/login"
+        android:id="@+id/btn_login"
         android:layout_width="150dp"
         android:layout_height="40dp"
-        android:layout_below="@id/password"
+        android:layout_below="@id/et_password"
         android:layout_marginTop="40dp"
         android:text="LOG IN"
         android:textColor="#fff"
@@ -60,7 +60,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Forgot your password?"
-        android:layout_below="@id/login"
+        android:layout_below="@id/btn_login"
         android:layout_marginTop="20dp"
         android:layout_centerHorizontal="true"
         android:gravity="center"
@@ -68,7 +68,7 @@
         android:textStyle="bold"/>
 
     <TextView
-        android:id="@+id/register"
+        android:id="@+id/tv_reg"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Register"
